--- a/package.json
+++ b/package.json
@@ -43,10 +43,9 @@
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.7",
     "react-markdown": "^10.1.0",
-    "react-markdown-editor-lite": "^1.3.4",
     "react-modal": "^3.16.3",
     "react-select": "^5.10.1",
-    "react-simplemde-editor": "^5.2.0",
+    "@uiw/react-md-editor": "^4.0.4",
     "react-sortablejs": "^6.1.4",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
